[package]
name = "epoch"
version = "0.0.2"
authors = ["David Stainton <dawuud@riseup.net>"]
description = "Epoch time calculations"
homepage = "https://github.com/sphinx-cryptography/epoch"
repository = "https://github.com/sphinx-cryptography/epoch"
documentation = "https://docs.rs/epoch/"
readme = "README.md"
keywords = ["time", "epoch", "clock"]
license = "AGPL-3.0-only"


[dependencies]
chrono = "0.4.6"

[dev-dependencies]
